[java11] Use Path.of instead of Paths.get
after java 11, Paths.get is just calling Path.of